[fix] images alignment on welcome page

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -131,7 +131,6 @@ main section {
   iframe {
     background-color: var(--grey-10);
     display: block;
-    margin: 0 auto;
     outline: 1px solid rgba(12, 12, 13, .1);
     outline-offset: -1px;
   }
